fixing margins, gaps, and img width

--- a/styles.css
+++ b/styles.css
@@ -58,8 +58,8 @@ nav a {
 }
 
 article {
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 3%;
+    margin-right: 3%;
 }
 
 article h1 {
@@ -77,14 +77,14 @@ article h1 {
 
 .dogs {
     display: grid;
-    grid-gap: 20px;
+    grid-gap: 10px;
     margin-bottom: 50px;
 }
 
 .row {
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
-    grid-gap: 20px;
+    grid-gap: 10px;
 }
 
 .dog {
@@ -93,8 +93,7 @@ article h1 {
 }
 
 .dog img {
-    width: 238px;
-    height: 142px;
+    width: 190px;
 }
 
 .dog button {
@@ -103,7 +102,6 @@ article h1 {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: 18px;
-    width: 75%;
     margin-bottom: 10px;
 }
 
